--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,15 @@
-
 [functions]
   directory = "netlify/functions"
 
-[scheduled]
-  functions = ["autopick-scheduled"]
+[functions."autopick-europe"]
+  schedule = "0 13 * * *" # 7:00 a.m. hora CDMX
+
+[functions."autopick-pre-mx"]
+  schedule = "0 18 * * *" # 12:00 p.m. hora CDMX
+
+[functions."autopick-evening"]
+  schedule = "0 0 * * *" # 6:00 p.m. hora CDMX
+
+# Si deseas conservar la función programada general, puedes dejar esto:
+#[scheduled]
+#  functions = ["autopick-scheduled"]
