--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,11 @@
 [functions]
   directory = "netlify/functions"
 
+[functions."autopick-test"]
+  schedule = "30 14 * * *" # 8:30 a.m. CDMX
+
 [functions."autopick-europe"]
-  schedule = "0 13 * * *" # 8:30 a.m. hora CDMX
+  schedule = "0 13 * * *" # 7:00 a.m. hora CDMX
 
 [functions."autopick-pre-mx"]
   schedule = "0 18 * * *" # 12:00 p.m. hora CDMX
