--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   directory = "netlify/functions"
 
 [functions."autopick-test"]
-  schedule = "30 14 * * *" # 8:30 a.m. hora CDMX
+  schedule = "0 16 * * *" # 10:00 a.m. CDMX
 
 [functions."autopick-europe"]
   schedule = "0 13 * * *" # 7:00 a.m. hora CDMX
