--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,17 @@
 [functions]
   directory = "netlify/functions"
 
-[functions."autopick-test"]
-  schedule = "0 16 * * *" # 10:00 a.m. CDMX
+# 🔁 FUNCIONES PROGRAMADAS (hora en UTC)
 
 [functions."autopick-europe"]
-  schedule = "0 13 * * *" # 7:00 a.m. hora CDMX
+  schedule = "0 13 * * *" # 7:00 a.m. CDMX
 
 [functions."autopick-pre-mx"]
-  schedule = "0 18 * * *" # 12:00 p.m. hora CDMX
+  schedule = "0 18 * * *" # 12:00 p.m. CDMX
 
 [functions."autopick-evening"]
-  schedule = "0 0 * * *" # 6:00 p.m. hora CDMX
+  schedule = "0 0 * * *"  # 6:00 p.m. CDMX
 
-# Si deseas conservar la función programada general, puedes dejar esto:
-#[scheduled]
-#  functions = ["autopick-scheduled"]
+# 🔬 OPCIONAL: función de prueba (la puedes eliminar o dejar comentada)
+[functions."autopick-test"]
+  schedule = "0 16 * * *" # 10:00 a.m. CDMX (usada para pruebas)
