--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "build": "echo 'Build step (dummy)'"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.7"
   }
 }
