--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "punterx-panel",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "build": "echo 'Build step (dummy)'"
   },
   "dependencies": {
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^3.3.2"
   }
 }
