--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,2 @@
-[build]
-  publish = "."            # Esto asegura que Netlify sirva index.html desde la raíz
-  functions = "netlify/functions"
-
-[functions]
-  directory = "netlify/functions"
-
-# 🔁 FUNCIONES PROGRAMADAS (hora en UTC)
-#[functions."autopick-vip"]
-#  schedule = "0 23 * * *"  # 17:00 CDMX, solo si vuelves a activar autopicks por hora
+[functions."autopick-vip"]
+  schedule = "*/10 * * * *"  # ⏱️ Cada 10 minutos
