--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "scripts": {
     "build": "echo 'Build step (dummy)'"
   },
+"dependencies": {
+  "@supabase/supabase-js": "^2.53.0",
+  "dayjs": "^1.11.10",
+  "dotenv": "^16.3.1",
+  "node-fetch": "^3.3.2",
+  "openai": "^4.30.1"
+}
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
     "dayjs": "^1.11.10",
