--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
 
 [functions]
   node_bundler = "esbuild"
+  external_node_modules = ["openai", "node-fetch"]
 
 [functions."autopick-vip-nuevo"]
   schedule = "*/15 * * * *"
