--- a/package.json
+++ b/package.json
@@ -15,3 +15,11 @@
     "openai": "^5.12.0"
   }
 }
+
+{
+  "scripts": {
+    "pre": "node netlify/functions/autopick-vip-nuevo.cjs",
+    "out": "node netlify/functions/autopick-outrights.cjs",
+    "live": "node netlify/functions/autopick-live.cjs --loop"
+  }
+}
