--- a/netlify.toml
+++ b/netlify.toml
@@ -31,7 +31,6 @@
     "node-fetch"
   ]
 
-
 # ---------------------------------------
 # Envíos (sin cron; endpoint HTTP público)
 # ---------------------------------------
@@ -46,7 +45,8 @@
   schedule = "*/15 * * * *"
   included_files = [
     "netlify/functions/_supabase-client.cjs",
-    "prompts_punterx.md"
+    "prompts_punterx.md",
+    "netlify/functions/_lib/**"
   ]
   external_node_modules = [
     "@supabase/supabase-js",
@@ -62,7 +62,8 @@
   schedule = "*/15 * * * *"
   included_files = [
     "netlify/functions/_supabase-client.cjs",
-    "prompts_punterx.md"
+    "prompts_punterx.md",
+    "netlify/functions/_lib/**"
   ]
   external_node_modules = [
     "@supabase/supabase-js",
@@ -78,7 +79,8 @@
   schedule = "0 * * * *"
   included_files = [
     "netlify/functions/_supabase-client.cjs",
-    "prompts_punterx.md"
+    "prompts_punterx.md",
+    "netlify/functions/_lib/**"
   ]
   external_node_modules = [
     "@supabase/supabase-js",
@@ -142,6 +144,23 @@
     "node-fetch"
   ]
 
+# --------------------------------------
+# Autopick LIVE (endpoint HTTP + helpers)
+# --------------------------------------
+[functions."autopick-live"]
+  node_bundler = "esbuild"
+  included_files = [
+    "netlify/functions/send.js",
+    "prompts_punterx.md",
+    "netlify/functions/_lib/**"
+  ]
+  external_node_modules = [
+    "node-fetch",
+    "@supabase/supabase-js",
+    "openai"
+  ]
+  timeout = 60
+
 # ----------------
 # Redirects útiles
 # ----------------
@@ -149,10 +168,3 @@
   from = "/diag"
   to = "/.netlify/functions/diagnostico-total"
   status = 200
-
-  [functions."autopick-live"]
-  node_bundler = "esbuild"
-  included_files = ["netlify/functions/send.js", "prompts_punterx.md"]
-  external_node_modules = ["node-fetch", "@supabase/supabase-js", "openai"]
-  timeout = 60
-
