chore: add @netlify/functions and update lockfile

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "live": "node netlify/functions/autopick-live.cjs --loop"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.55.0",
+    "@netlify/functions": "^2.8.2",
+    "@supabase/supabase-js": "2.55.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.6.1",
-    "node-fetch": "^2.7.0",
-    "openai": "^5.13.1"
+    "node-fetch": "3.3.2",
+    "openai": "4.104.0"
   }
 }
