chore(env): activar AF_MATCH_TIME_SIM y DEBUG_TRACE para diagnóstico de matching

--- a/netlify.toml
+++ b/netlify.toml
@@ -214,3 +214,7 @@ schedule = "*/10 * * * *"
 [[scheduled.functions]]
 path = "autopick-vip-run2"
 schedule = "*/15 * * * *"
+
+[functions.environment]
+AF_MATCH_TIME_SIM = "1"
+DEBUG_TRACE = "1"
