--- a/netlify.toml
+++ b/netlify.toml
@@ -216,7 +216,10 @@ path = "autopick-vip-run2"
 schedule = "*/15 * * * *"
 
 
+
 [functions.environment]
 AF_MATCH_TIME_SIM = "1"
 DEBUG_TRACE = "1"
 MATCH_RESOLVE_CONFIDENCE = "0.6"
+AF_TIME_PAD_MIN = "15"
+AF_MIN_SIM = "0.84"
