--- a/netlify.toml
+++ b/netlify.toml
@@ -223,3 +223,6 @@ DEBUG_TRACE = "1"
 AF_TIME_PAD_MIN = "15"
 AF_MIN_SIM = "0.84"
 MATCH_RESOLVE_CONFIDENCE = "0.5"
+
+[functions.autopick-vip-scheduler]
+schedule = "*/15 * * * *"
