chore: add cron for scheduler_bridge_v2 (*/15)

--- a/netlify.toml
+++ b/netlify.toml
@@ -229,3 +229,6 @@ MATCH_RESOLVE_CONFIDENCE = "0.5"
   schedule = "*/15 * * * *"
 
 
+
+[functions.scheduler_bridge_v2]
+  schedule = "*/15 * * * *"
